les services manipulent uniquement des entity